spacing bug -welcome msg

--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,9 @@ main{
 .hero-img{
   width:50%;
 }
+#welcome-msg{
+  white-space: normal;
+}
 .welcome-username{
   white-space: nowrap;
 }
